# machine-academy

./: Cargo.toml
src/: lib.rs
src/common/: autoencoder.rs  linear.rs  mod.rs  time_series.rs
src/data/: mod.rs
