[package]
name = "machine-academy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.11", features=["train", "wgpu"] }
burn-ndarray = { version = "0.11", features=["blas-netlib"], optional = true }
serde = { version = "1", features = ["derive"] }
# crossbeam = "0.8"
rand = { version = "0.8", features = ["small_rng"] }
# toml = { workspace = true }
# fxhash = "0.2"
bincode = "1"
chrono = "0.4"
rayon = "1"
log = "0.4"
fern = "0.6"
tempfile = "3"
